--- a/src/gwt/dmassist-gwt/war/Dmassist_gwt.html
+++ b/src/gwt/dmassist-gwt/war/Dmassist_gwt.html
@@ -17,7 +17,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Web Application Starter Project</title>
+    <title>DM Assist</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
