Added status bar with round counts

--- a/src/gwt/dmassist-gwt/war/Dmassist_gwt.html
+++ b/src/gwt/dmassist-gwt/war/Dmassist_gwt.html
@@ -50,13 +50,13 @@
 <div id="splash" style="aboutBox">
 <p>Copyright © 2009, 2010 Ron "Ziroby" Romero</p>
 
-<p>This program comes with ABSOLUTELY NO WARRANTY.<br />
-This is free software, and you are welcome to redistribute it under
-certain conditions; see "Help -> License. . . " for details. DM Assist
-contains:<br />
+<p>This program comes with ABSOLUTELY NO WARRANTY.</p>
+This is free software, and you are welcome to redistribute it under<br/>
+certain conditions; see "Help -> License. . . " for details. DM Assist<br/>
+contains:<p />
 portions from GMGen/PCGen,copyright © 2002 Devon D. Jones</p>
-PCGen Character Generator Copyright © 2001-2003, PCgen Data team
-including, but not limited to, Rob Reed (Mynex), Patryk Adamski
+PCGen Character Generator Copyright © 2001-2003, PCgen Data team<br/>
+including, but not limited to, Rob Reed (Mynex), Patryk Adamski<br/>
 (Ruemere), Hugo Perez (Emperorfranz), Andrew McDougall (Tir Gwaith)
 <p>jYaml, copyright © 2005, Yu Cheung Ho</p>
 </div>
