--- a/src/android/assets/ziroby.html
+++ b/src/android/assets/ziroby.html
@@ -5,7 +5,8 @@
 	  <p>DM Assist contains:
 		<ul>
 		  <li>Computer science degree and strong Java fundamentals</li><br>
-		  <li>...</li><br>
-		  <li>...</li><br>
-		  <li>...</li><br>
+          <lI>Expert and advocate for Agile software development.</lI><br>
+          <li>Architect, Team Lead, formal trainer, and always a leader, an informal trainer, and a mentor.</li><br>
+          <li>Fifteen years development experience in Java, C#, C++, Android, SQL, etc.</li><br>
+          <li>Available for development work and Agile consulting, especially in the Austin, Texas area.</li><br>
 	    </ul></html>
