Help and various text mods

--- a/src/android/assets/ziroby.html
+++ b/src/android/assets/ziroby.html
@@ -1,12 +1,25 @@
-<html><H1><center>Ron "Ziroby" Romero 
-  </center></H1>
-  <br>
-  <br><center>Senior Java Software Developer</center>
-	  <p>DM Assist contains:
-		<ul>
-		  <li>Computer science degree and strong Java fundamentals</li><br>
-          <lI>Expert and advocate for Agile software development.</lI><br>
-          <li>Architect, Team Lead, formal trainer, and always a leader, an informal trainer, and a mentor.</li><br>
-          <li>Fifteen years development experience in Java, C#, C++, Android, SQL, etc.</li><br>
-          <li>Available for development work and Agile consulting, especially in the Austin, Texas area.</li><br>
-	    </ul></html>
+<html>
+<body>
+<H1>
+<center><a href="http://www.linkedin.com/in/ronromero">Ron
+"Ziroby" Romero</a></center>
+</H1>
+Senior Java Software Developer
+<ul>
+	<li>Computer science degree and strong Java fundamentals</li>
+	<br>
+	<lI>Expert and advocate for Agile software development.</lI>
+	<br>
+	<li>Architect, Team Lead, formal trainer, and always a leader, an
+	informal trainer, and a mentor.</li>
+	<br>
+	<li>Fifteen years development experience in Java, C#, C++,
+	Android, SQL, etc.</li>
+	<br>
+	<li>Available for development work and Agile consulting,
+	especially in the Austin, Texas area.</li>
+</ul>
+<center><a href="http://www.linkedin.com/in/ronromero">R&eacute;sum&eacute;</a><br>
+<a href="http://ziroby.com">Ziroby.com</a></center>
+</body>
+</html>
